--- a/Maths/Config/DefaultEngine.ini
+++ b/Maths/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/CrossProduct/Map_CrossProduct.Map_CrossProduct
+EditorStartupMap=/Game/CrossProduct/Map_CrossProduct.Map_CrossProduct
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
